# prism

./: README.md  pyproject.toml
benchmarks/: __init__.py  analogy_benchmark.py  commonsense_benchmark.py  reasoning_benchmark.py  run_benchmarks.py
data/: README.md  __init__.py
data/loaders/: conceptnet_loader.py  knowledge_integrator.py  wordnet_loader.py
gunter/: .gitignore  README.md  pyproject.toml
gunter/data/: README.md
gunter/src/gunter/: __main__.py  main.py
gunter/src/gunter/agents/: orchestrator.py  quality_gate.py  semantic_router.py  semantic_weaver.py  task_planner.py  wordnet_agent.py
gunter/src/gunter/core/: __init__.py  lexicon.py
gunter/src/gunter/data/loaders/: conceptnet_loader.py  knowledge_integrator.py  wordnet_loader.py
gunter/src/gunter/learning/: __init__.py  feedback.py
gunter/src/gunter/memory/: episode_index.py  persistence.py
gunter/src/gunter/parsing/: __init__.py  user_statement_parser.py
gunter/src/gunter/reasoning/: __init__.py  advanced_queries.py  analogy_engine.py  composition.py  confidence.py  contradiction.py  multihop.py  temporal.py  transitive.py  vsa_reasoner.py
gunter/src/gunter/training/: fact_extractor.py  preprocessor.py  trainer.py
gunter/tests/: test_advanced_reasoning.py
scripts/: train_knowledge.py
src/gunter/: __init__.py
src/gunter/agents/: blackboard.py  file_agent.py  response_composer.py  websearch_agent.py  wikidata_agent.py  (+1 more)
src/prism/: __init__.py  __main__.py  main.py
tests/: test_advanced_reasoning.py  test_knowledge_loading.py  test_vsa.py  training_data.txt
(+58 files in other folders)
